welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:70: error: Unmatched closing brace '}' ignored here
 }
 ^